--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,12 @@ jobs:
         run: npm version patch -m "Increment version [skip ci]"
 
       - name: Push version increment
-        run: git push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Read the updated package version into an environment variable for later use
       - name: Read package.json version
