--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build-and-publish:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
 
     steps:
@@ -22,31 +21,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Configure Git
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-
-      - name: Increment package version
-        run: npm version patch -m "Increment version [skip ci]"
-
-      - name: Push version increment
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Read the updated package version into an environment variable for later use
-      - name: Read package.json version
-        run: echo "PKG_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
-
       - name: Build Docker image
-        run: docker build -t griffinodow/porkbun-ddns:${{ env.PKG_VERSION }} .
+        run: docker build -t griffinodow/porkbun-ddns:latest .
 
       - name: Log into Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
       - name: Push Docker image
-        run: docker push your-dockerhub-username/porkbun-ddns:${{ env.PKG_VERSION }}
+        run: docker push your-dockerhub-username/porkbun-ddns:latest
