--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Debug
+        run: ls -la
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
